--- a/_config.yml
+++ b/_config.yml
@@ -60,4 +60,4 @@ google_analytics: UA-100461102-1
 # own fork.
 hydeout:
   version:          4.0.2
-  repo:             https://github.com/fongandrew/hydeout
+  repo:             https://github.com/meamank/meamank.github.io
